[tool.poetry]
name = "mercadoBitcoin"
version = "0.1.0"
description = ""
authors = ["Gian Panacioni <giangabrielpanac@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
ratelimit = "^2.2.1"
backoff = "^2.1.2"
boto3 = "^1.24.45"
pynamodb = "^5.2.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
zappa = "^0.54.2"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
